fix: style charts to avoid overlapping when multiple categories are present

--- a/src/pages/home/components/budgetDiagram/budgetDiagram.module.scss
+++ b/src/pages/home/components/budgetDiagram/budgetDiagram.module.scss
@@ -1,10 +1,10 @@
 
 .diagram {
-    @apply bg-white rounded-xl p-2 flex-1;
+    @apply bg-white rounded-xl p-2 flex-1 flex flex-col items-center gap-6;
 }
 
 .header {
-    
+    @apply self-start;
 }
 
 .title {
@@ -21,5 +21,5 @@
 
 
 .summary {
-    @apply mt-2;
+    @apply mt-auto pt-9 self-start;
 }
